--- a/Tweakaria.csproj
+++ b/Tweakaria.csproj
@@ -3,11 +3,11 @@
   <Import Project="..\tModLoader.targets" />
   <PropertyGroup>
     <AssemblyName>Tweakaria</AssemblyName>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="tModLoader.CodeAssist" Version="0.1.*" />
+    <PackageReference Include="tModLoader.CodeAssist" Version="0.1.5" />
   </ItemGroup>
 </Project>
